@@ -282,6 +282,8 @@ $labels['skipdeleted'] = 'Do not show deleted messages';
 $labels['showinlineimages'] = 'Display attached images below the message';
 $labels['autosavedraft']  = 'Automatically save draft';
 $labels['everynminutes']  = 'every $n minutes';
+$labels['keepaliveevery']  = 'every $n minute(s)';
+$labels['keepalive']  = 'Check for new messages on';
 $labels['never']  = 'never';
 $labels['messagesdisplaying'] = 'Displaying Messages';
 $labels['messagescomposition'] = 'Composing Messages';
