@@ -230,6 +230,8 @@ $labels['flagfordeletion'] = 'Oznacz wiadomość do usunięcia zamiast ją usuwa
 $labels['skipdeleted'] = 'Ukryj wiadomości oznaczone do usunięcia';
 $labels['autosavedraft'] = 'Automatyczny zapis tworzonej wiadomości';
 $labels['everynminutes'] = 'co $n minut(y)';
+$labels['keepalive']  = 'Sprawdzaj czy nadeszły nowe wiadomości';
+$labels['keepaliveevery']  = 'co $n minut(y)';
 $labels['never'] = 'nigdy';
 $labels['focusonnewmessage'] = 'Informuj przeglądarkę o nowej wiadomości';
 $labels['folder'] = 'Folder';
